First implementation of saving/loading workflows